--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.scroll {
+  display: flex;
+}
+
+@media (max-width: 480px) {
+  .scroll {
+    display: block;
+    padding: 24px;
+  }
+  .scroll div {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+}
